attempt to fix invisible buttons 2

--- a/assets/css/Mobile_overlayUI.css
+++ b/assets/css/Mobile_overlayUI.css
@@ -110,7 +110,8 @@
 #ring-control-left{
     /* left: var(--ring-ctrl-padding-x); */
     left: 200px;
-    background: var(--left-arrow-icon-url);
+    /* background: var(--left-arrow-icon-url); */
+    background: red;
 }
 
 #ring-control-right{
